A ton of changes

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             officia deserunt mollit anim id est laborum
           </p>
           <p>
+            <img src="images/300x200.jpg" alt="" class="right-float" />
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -60,7 +61,7 @@
           </p>
         </section>
         <div class="sidebar">
-          <p><img src="images/square200px.png" alt="Profile Picture" /></p>
+          <p><img src="images/square200px.png" alt="Profile Picture" class="left-float" /></p>
           <h2>Contact Details</h2>
           <address>My Address</address>
           <p>
